--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "catalogo-doces",
+  "homepage": "https://isaias-carneiro.github.io/catalogo-doces",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -22,6 +24,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.3.0",
     "vite": "^4.4.5"
   }
 }
+
